--- a/examportfront/src/app/app.component.html
+++ b/examportfront/src/app/app.component.html
@@ -1,32 +1,4 @@
-
-<div class="bootstrap-wrapper">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4">.col-md-4</div>
-			<div class="col-md-4">.col-md-4</div>
-			<div class="col-md-4">.col-md-4</div>
-		</div>
-		<div class="row hidden-sm-down"> <!-- Hidden on small screens -->
-			<div class="col-md-6">.col-md-6</div>
-			<div class="col-md-6">.col-md-6</div>
-		</div>
-	</div>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
 
-<h1>Hello world!</h1>
-
-
-
-
-<section>
-  
-  <div class="example-button-row">
-    <button mat-raised-button>Basic</button>
-    <button mat-raised-button color="primary">Primary</button>
-    <button mat-button color="accent">Accent</button>
-    <button mat-button color="warn">Warn</button>
-    <button mat-button disabled>Disabled</button>
-    <a mat-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
