--- a/examportfront/src/app/pages/login/login.component.html
+++ b/examportfront/src/app/pages/login/login.component.html
@@ -8,7 +8,7 @@
                 </div>
 
                 <h1 class=" text-center">Login Here !!</h1>
-{{loginData | json}}
+<!-- {{loginData | json}} -->
                 <form (ngSubmit)="formSubmit()">
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>User Name</mat-label>
