--- a/examportfront/src/styles.css
+++ b/examportfront/src/styles.css
@@ -7,6 +7,10 @@ body {
     background-color: #f5f5f5;
 }
 
+.mat-icon {
+    vertical-align: middle;
+}
+
 
 .text-center{
     text-align: center;
@@ -42,5 +46,9 @@ body {
 }
 .pad20{
     padding: 20px;
+}
+
+.mt30{
+    margin-top: 30px!important;
 }
 
