All working till video 26 04:28 19/12/2022

--- a/examportfront/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/examportfront/src/app/pages/admin/sidebar/sidebar.component.html
@@ -14,19 +14,19 @@
 
         <hr>
 
-        <button mat-list-item routerLink="/admin/profile" ><mat-icon mat-list-icon>list</mat-icon>  Categories</button>
+        <button mat-list-item routerLink="/admin/categories" ><mat-icon mat-list-icon>list</mat-icon>  Categories</button>
 
         <hr>
 
-        <button mat-list-item routerLink="/admin/profile" ><mat-icon mat-list-icon>add_circle_outline</mat-icon>  Add Categories</button>
+        <button mat-list-item routerLink="/admin/add-category" ><mat-icon mat-list-icon>add_circle_outline</mat-icon>  Add Categories</button>
 
         <hr>
 
-        <button mat-list-item routerLink="/admin/profile" ><mat-icon mat-list-icon>quiz</mat-icon>  Quizzes</button>
+        <button mat-list-item routerLink="/admin/quizzes" ><mat-icon mat-list-icon>quiz</mat-icon>  Quizzes</button>
 
         <hr>
 
-        <button mat-list-item routerLink="/admin/profile" ><mat-icon mat-list-icon>add_task</mat-icon>  Add Quiz</button>
+        <button mat-list-item routerLink="/admin/add-quiz" ><mat-icon mat-list-icon>add_task</mat-icon>  Add Quiz</button>
 
         <hr>
 
