--- a/examportfront/src/app/pages/admin/view-quizzes/view-quizzes.component.html
+++ b/examportfront/src/app/pages/admin/view-quizzes/view-quizzes.component.html
@@ -9,7 +9,7 @@
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title> {{q.title}}</mat-card-title>
-                <mat-card-subtitle> {{ q.category?.title }}</mat-card-subtitle>
+                <mat-card-subtitle> {{ q.category.title }}</mat-card-subtitle>
             </mat-card-header>
             <hr>
             <mat-card-content>
