all completed till video 31 05:33 20/12/2022

--- a/examportfront/src/app/pages/admin/view-quizzes/view-quizzes.component.css
+++ b/examportfront/src/app/pages/admin/view-quizzes/view-quizzes.component.css
@@ -2,3 +2,8 @@
     background-image: url('https://cdn-icons-png.flaticon.com/512/8776/8776742.png');
     background-size: cover;
   }
+
+  .mat-success {
+    color: green;
+    
+}
