--- a/examportfront/src/app/pages/admin/update-quiz/update-quiz.component.html
+++ b/examportfront/src/app/pages/admin/update-quiz/update-quiz.component.html
@@ -1,14 +1,14 @@
 <mat-card class="mt30 pad20">
-    <h1>Add New Quiz</h1>
+    <h1>Update Quiz</h1>
     <div class="row">
         <div class="col-md-12 ">
-            <form (ngSubmit)="addQuiz()">
+            <form *ngIf="quiz" (ngSubmit)="updateData()">
                 <div class="row">
                 <!-- title field -->
                 <div class="col-md-9">
                 <mat-form-field class="w100" appearance="outline">
                     <mat-label>Enter Title</mat-label>
-                    <input required [(ngModel)]="quizData.title" type="text" name='title' placeholder="Enter here" matInput>
+                    <input required [(ngModel)]="quiz.title" type="text" name='title' placeholder="Enter here" matInput>
                 </mat-form-field>
             </div>
 
@@ -16,7 +16,7 @@
             <div class="col-md-3">
             <mat-form-field class="w100" appearance="outline">
                 <mat-label>Category</mat-label>
-                <mat-select name="category" [(ngModel)]="quizData.category">
+                <mat-select name="category" [(ngModel)]="quiz.category">
                   <mat-option *ngFor="let c of categories" [value]="c">
                     {{c.title}}
                   </mat-option>
@@ -32,7 +32,7 @@
                         <!-- //max-marks -->
                         <mat-form-field class="w100" appearance="outline">
                             <mat-label>Max Marks</mat-label>
-                            <input [(ngModel)]="quizData.maxMarks"  type="number" name='maxMarks' placeholder="Enter here" matInput>
+                            <input [(ngModel)]="quiz.maxMarks"  type="number" name='maxMarks' placeholder="Enter here" matInput>
                         </mat-form-field>
                     </div>
 
@@ -40,7 +40,7 @@
                         <!-- //number of questions to be displayed -->
                         <mat-form-field class="w100" appearance="outline">
                             <mat-label>Questions Displayed</mat-label>
-                            <input [(ngModel)]="quizData.numberOfQuestions"  type="number" name='numberOfQuestions' placeholder="Enter here" matInput>
+                            <input [(ngModel)]="quiz.numberOfQuestions"  type="number" name='numberOfQuestions' placeholder="Enter here" matInput>
                         </mat-form-field>
                     </div>
                 </div>
@@ -48,21 +48,21 @@
                 <!-- descriptionFielsd -->
                 <mat-form-field class="w100">
                     <mat-label>Enter Description</mat-label>
-                    <textarea [(ngModel)]="quizData.description"  type="text" rows="5" name='description' placeholder="Enter here" matInput></textarea>
+                    <textarea [(ngModel)]="quiz.description"  type="text" rows="5" name='description' placeholder="Enter here" matInput></textarea>
                 </mat-form-field>
 
             <!-- //active field -->
                 <section class="example-section mb20">
                     <mat-slide-toggle name="active"
-                    [(ngModel)]="quizData.active" 
-                    class="example-margin" color="warn">
+                    [(ngModel)]="quiz.active" 
+                    class="example-margin" color="primary">
                         Publish Status
                     </mat-slide-toggle>
                 </section>
 
             
                 <div class="container text-center">
-                    <button mat-raised-button type="submit" color="primary">Add</button>
+                    <button mat-raised-button type="submit" color="primary">Update</button>
                 </div>
 
             </form>
@@ -73,4 +73,4 @@
 </mat-card>
 
 
-<!-- {{quizData | json}} -->
+<!-- {{quiz | json}} -->
