--- a/examportfront/src/app/pages/profile/profile.component.html
+++ b/examportfront/src/app/pages/profile/profile.component.html
@@ -35,7 +35,7 @@
                             
                             <tr>
                                 <td>Email</td>
-                                <td>{{user['email']}}</td>
+                                <td>{{user['email'] | uppercase}}</td>
                             </tr>
                             <tr>
                                 <td>Role</td>
