--- a/examportfront/src/styles.css
+++ b/examportfront/src/styles.css
@@ -60,4 +60,15 @@ body {
 .mt30{
     margin-top: 30px!important;
 }
-
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
