durgesh ne jitna karaya utna complete krliya h

--- a/examportfront/src/app/app.component.html
+++ b/examportfront/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<ngx-ui-loader fgsColor="#0d65ff" pbColor="#0d65ff" text="Please Wait.." [pbThickness]="5" fgsType="three-strings"></ngx-ui-loader>
 
-
+<div ngxUiLoaderBlurred [blur]="5">
+    <!-- This page content will be blurred/frosted when foreground loader is showed -->
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+</div>
