--- a/examportfront/src/app/pages/user/start/start.component.html
+++ b/examportfront/src/app/pages/user/start/start.component.html
@@ -3,14 +3,16 @@
         <div class="row">
             <div class="col-md-2">
                 <!-- instructions -->
-                <mat-card style="margin-top:70px; align-items: center;" class="pad20">
-                    <mat-card-header><b>Progress</b></mat-card-header>
-                    <mat-card-subtitle class="mt20 mb20 ml20">Quiz will automatically submitted when timer reaches to
-                        <b>00:00:00</b></mat-card-subtitle>
-                    <mat-card-content>
+                <mat-card style="margin-top:70px; align-items: center; " class="pad20">
+                    <mat-card-header><b>Instructions</b></mat-card-header>
+                    <mat-card-subtitle class="mt20 ">
+                        <div class="container" style="justify-content: center;">
+                            <p>Do not Refresh the page otherwise you will get new questions.</p>
+                            <p>Do not Switch the tabs.</p>
+                            <p>Do not minimize the window.</p>
+                        </div>
                         
-
-                    </mat-card-content>
+                    </mat-card-subtitle>
                 </mat-card>
             </div>
 
@@ -103,7 +105,7 @@
                 <mat-card-actions class=" mt20 mb20">
                     <!-- actions -->
                     <div class="container text-center">
-                        <button mat-raised-button color="primary">Print</button>
+                        <button mat-raised-button (click)="printPage()" color="primary">Print</button>
                         <button mat-raised-button routerLink="/user-dashboard/" color="accent"
                             class="ml20">Home</button>
                     </div>
